Tor relay scanner added
Added checking the availability of the Internet via Tor. If the Internet is unavailable, new relays for connection are downloaded and checked.
Thanks to ValdikSS for its tor-relay-scanner (https://github.com/ValdikSS/tor-relay-scanner ).

--- a/_tor/Dockerfile
+++ b/_tor/Dockerfile
@@ -1,8 +1,22 @@
-# set alpine as the base image of the Dockerfile
+# Use Alpine Linux as the base image
 FROM alpine:latest
 
-# update the package repository, install Privoxy, Tor and Lyrebird
-RUN apk --no-cache --update --upgrade add privoxy tor  lyrebird --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
+# Update the repositories and install necessary packages
+RUN apk --no-cache --update --upgrade add \
+    privoxy \
+    tor \
+    py3-requests \
+    py3-pysocks \
+    lyrebird \
+    --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
 
-# start Tor and Privoxy
-CMD tor & privoxy --no-daemon /etc/privoxy/config
+# Copy the Python script and make it executable
+COPY ./check_tor /usr/local/bin/check_tor
+RUN chmod +x /usr/local/bin/check_tor/main.py
+
+# Copy the start script and make it executable
+COPY ./start.sh /usr/local/bin/start.sh
+RUN chmod +x /usr/local/bin/start.sh
+
+# Use the script as an entry point
+CMD ["/usr/local/bin/start.sh"]
